@@ -1,5 +1,12 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. добавлена возможность использовать prototype с одинаковыми именами.
+	!! использовать данную возможность нужно только при первичной загрузке базы схем.
+	т.е. загрузить базы, загрузить схему, например cpp, попользоваться ей, а потом попытаться 
+	заменить её на другую без перезагрузки всей базы, нельзя - будут ошибки
+
+#Revision: 1712
+	#Author: ctapmex Date: 2011-06-27 17:28:31 +0600 (Пн, 27 июн 2011)
 	1. неверный порядок вызова процедур - обращение к непроинициализированным данным
 
 #Revision: 1687
